# ItB

./: .gitignore  AGENTS.md  BLOCKERS.md  CLAUDE.md  EVAL.md  GOAL.md  HEURISTICS.md  LOG.md  NEXT.md  README.md  STATE.md  STRATEGY.md  TODO.md  feedback_grid_buy_priority.md  findings.md  game_loop.py  island_select.py  scrape_wiki.py  scratchPad.txt  tile_hover.py
data/: achievements_detailed.json  board_state_test.json  grid_reference.json  islands.json  known_types.json  lightning_war_timing_profile.json  mechanics.json  mining_cutoff.json  mission_bonus_objectives.json  mission_metadata.json  mission_unit_objectives.json  pilots.json  ref_achievement_strategies.md  ref_game_mechanics.md  ref_pilot_abilities.md  ref_pilots.md  ref_squads_and_mechs.md  ref_vek_bestiary.md  squads.json  terrain_status_mechanics.json  ui_regions.json  vek.json  weapon_overrides_staged.jsonl  weapon_penalty_log.json
diagnoses/: known_gaps.yaml  rejections.jsonl  rules.yaml
docs/: adaptable_victory_rusting_hulks_retrospective.md  change_the_odds_random_squad_retrospective.md  class_specialist_windows_retrospective.md  complete_victory_bombermechs_retrospective.md  diagnosis_loop_design.md  env_hazards_by_island.md  final_cave_hard_rusting_hulks_retrospective.md  hazardous_healing_overkill_retrospective.md  heap_m16_retrospective.md  hold_the_line_blitzkrieg_retrospective.md  immortal_hazardous_retrospective.md  investigation_beam_467k_outlier.md  investigation_grid_calibration_broken.md  investigation_grid_calibration_residual.md  itb_engine_observatory_research.md  itb_native_anchor_research.md  loot_boxes_random_squad_retrospective.md  lua_bridge_architecture.md  mech_specialist_custom_squad_retrospective.md  observatory_player_weapon_id_index.md  reference.md  (+21 more)
rust_solver/: Cargo.toml  pyproject.toml
rust_solver/src/: beam.rs  board.rs  enemy.rs  evaluate.rs  lib.rs  movement.rs  replay.rs  serde_bridge.rs  simulate.rs  solver.rs  turn_projection.rs  types.rs  weapons.rs
rust_solver/tests/: beam_vs_top1.rs  eval_turn_projection.rs  regression.rs
(+6293 files in other folders)
